[package]
name = "rust-tuya-mqtt"
version = "0.1.0"
authors = ["Emil Sodergren <EmilSodergren@users.noreply.github.com>"]
edition = "2018"
description = "This crate is a rust port of TheAgentK's implementation of tuya-mqtt in NodeJS"
homepage = "https://github.com/EmilSodergren/rust-tuya-mqtt"
repository = "https://github.com/EmilSodergren/rust-tuya-mqtt"
license-file = "LICENSE"
keywords = ["tuya", "smarthome", "smartlife", "mqtt", "openhab"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic-counter = "1.0.1"
crossbeam-channel = "0.3"
ctrlc = { version = "3.1", features = ["termination"] }
env_logger = "0.7"
failure = "0.1"
log = "0.4"
openssl = { version = "0.10", features = ["vendored"] }
pretty_env_logger = "0.4"
rumqtt = "0.31"
rust-tuyapi = "0.2"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
