[package]
name = "rust-tuya-mqtt"
version = "0.8.0"
authors = ["Emil Sodergren <EmilSodergren@users.noreply.github.com>"]
edition = "2018"
description = "This crate is a rust port of TheAgentK's implementation of tuya-mqtt in NodeJS"
homepage = "https://github.com/EmilSodergren/rust-tuya-mqtt"
repository = "https://github.com/EmilSodergren/rust-tuya-mqtt"
license-file = "LICENSE"
keywords = ["tuya", "smarthome", "smartlife", "mqtt", "openhab"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
crossbeam-channel = "0.3"
ctrlc = { version = "3.1", features = ["termination"] }
env_logger = "0.9"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
retry = { version = "1.2", default-features = false }
rumqttc = "0.10"
rust-tuyapi = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
